<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marconota.musicalstructure.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/recent_music_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/play_now_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25">

            <TextView
                android:id="@+id/playing_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playing_now" />
        </LinearLayout>

        <LinearLayout
            style="@style/songs_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/songs" />
        </LinearLayout>

        <LinearLayout
            style="@style/playlists_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/plists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playlists" />
        </LinearLayout>

        <LinearLayout
            style="@style/recent_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recent"
                android:textStyle="bold"

                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/fields_text"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/sting_fields_of_gold" />

    <TextView
        android:id="@+id/love_text"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fields_text"
        android:text="@string/queen_somebody_to_love" />

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/recent_notes" />


</RelativeLayout>

