<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marconota.musicalstructure.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/play_now_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/play_now_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25">

            <TextView
                android:id="@+id/playing_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playing_now"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="@style/songs_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/songs" />
        </LinearLayout>

        <LinearLayout
            style="@style/playlists_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/playlists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/playlists"

                />
        </LinearLayout>

        <LinearLayout
            style="@style/recent_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recent"

                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/sting_fields_of_gold"

        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/music_button_bar_bg"
        android:src="@drawable/music_button_bar" />

    <TextView
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="64dp"
        android:text="@string/playing_now_notes" />

</RelativeLayout>
